# ratel

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
3rd/cmake/: protobuf-config-version.cmake  protobuf-targets-release.cmake  protobuf-targets.cmake
3rd/cmake/spdlog/: spdlogConfigTargets.cmake
3rd/lib/: abseil_dll.lib  absl_flags.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_flags_internal.lib  absl_flags_marshalling.lib  absl_flags_parse.lib  absl_flags_private_handle_accessor.lib  absl_flags_program_name.lib  absl_flags_reflection.lib  absl_flags_usage.lib  absl_flags_usage_internal.lib  absl_log_flags.lib  absl_string_view.lib  libprotobuf-lite.lib  libprotobuf-lited.lib  libprotobuf.lib  libprotobufd.lib  libprotoc.lib  spdlog.lib  spdlogd.lib  sqlite3.lib  utf8_range.lib  utf8_validity.lib
3rd/lib/pkgconfig/: abseil_dll.pc  absl_absl_check.pc  absl_absl_log.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  (+151 more)
3rd/pkgconfig/: spdlog.pc
basic/: CMakeLists.txt  arrary2x.hpp  arraryx.hpp  basic.h  basic_export.h  basicpublic.h  crossplatform.h  directed_graph.hpp  id_seed.hpp  langext.h  notifier.hpp  pair.hpp  ratel_nsp.h  ratelnsp.h  string_proxy.cpp  string_proxy.h  variant.cpp  variant.h  winheader.h
builds/win/: ratel.sln
doc/: license_template.txt
src/basic/: arraryx.hpp  array2.hpp  basetypes.h  basic.h  basiclogger.cpp  basiclogger.h  basicpublic.h  langext.h  liblogger.h  ratelnsp.h  rstring.cpp  rstring.h  rstrutil.cpp  rstrutil.h  size.h  variant.cpp  variant.h  xy.hpp  xyz.hpp
src/database/: connection.cpp  connection.h  database.h  databaselogger.h  databasepublic.h  dbdriver.cpp  dbdriver.h  sqlbase.h  sqlerr.h  sqlfield.cpp  sqlfield.h  sqlquery.h  sqlrecord.cpp  sqlrecord.h  sqlresult.h  sqlstatement.cpp  sqlstatement.h
src/doc/: docpublic.h
src/filesys/: dircpy.cpp  dircpy.h  dirwalker.cpp  dirwalker.h  filescanner.cpp  filescanner.h  filesyspublic.h  fsyslogger.cpp  fsyslogger.h  path.cpp  path.h  pathfilter.h  pathop.cpp  pathop.h  pathremover.cpp  pathremover.h
src/kernel/: agilefileoperator.cpp  agilefileoperator.h  agilefilepipe.cpp  agilefilepipe.h  deftask.cpp  deftask.h  fsutil.cpp  fsutil.h  kernellogger.cpp  kernellogger.h  kernelpublic.h  propdict.cpp  propdict.h  session.cpp  session.h  task.h  uimediator.hxx  xsignal.hxx
src/package/: datablockfile.cpp  datablockfile.h  datablockstorage.cpp  datablockstorage.h  dirnode.cpp  dirnode.h  dirtable.cpp  dirtable.h  dirtree.cpp  dirtree.h  filenode.h  filetable.cpp  filetable.h  package.cpp  package.h  packagelogger.cpp  packagelogger.h  packagepublic.h  pkgdb.cpp  pkgdb.h  pkgfilebasic.h  pkgfilereader.cpp  pkgfilereader.h  pkgfilewriter.cpp  pkgfilewriter.h  pkglogger.cpp  pkglogger.h  pkgreader.cpp  pkgreader.h  pkgwriter.cpp  pkgwriter.h  rtldirdata.h
src/ratel/asio/: CMakeLists.txt  asio_base_type.h  asio_export.h  context_driver.cpp  context_driver.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_session.cpp  tcp_session.h  timer.cpp  timer.h  udp_peer.cpp  udp_peer.h
src/ratel/basic/: CMakeLists.txt  base_type.h  basic.h  basic_export.h  cross_platform.h  dbg_tracker.cpp  dbg_tracker.h  defer_exec.hpp  directed_graph.hpp  export_macro.h  id_seed.hpp  langext.h  notifier.hpp  ratel_nsp.h  string_proxy.cpp  string_proxy.h  thread_pool.cpp  thread_pool.h  time_util.cpp  time_util.h  timestamp.cpp  timestamp.h  win_header.h
src/ratel/geometry/: CMakeLists.txt  array_x.hpp  base_type.h  circle.hpp  curve.h  default_creator.hpp  dict_proxy.hpp  element_proxy.hpp  geo_inst.cpp  geometry.h  geometry.pb.cc  geometry.pb.h  geometry_export.h  is_serializable.hpp  line.hpp  person.pb.cc  person.pb.h  plane.cpp  plane.h  point.h  proxy_combine.hpp  rect.hpp  vec2.hpp  vec3.hpp  vec_proxy.hpp
src/ratel/geometry/protos/: geometry.proto  person.proto
src/ratel/system/: CMakeLists.txt  dynamic_library_loader.cpp  dynamic_library_loader.h  ratel_system_export.h
src/ratel/test/: CMakeLists.txt  main.cpp  test_asio.cpp  test_asio.h  test_asio_tcp_client.cpp  test_asio_tcp_client.h  test_asio_tcp_server.cpp  test_asio_tcp_server.h  test_asio_timer.cpp  test_asio_timer.h  test_asio_udp.cpp  test_asio_udp.h  test_directed_graph.cpp  test_directed_graph.h  test_dll_loader.cpp  test_dll_loader.h  test_geometry.cpp  test_geometry.h  test_logger.cpp  test_logger.h  test_notifier.cpp  test_notifier.h  test_string_proxy.cpp  test_string_proxy.h
src/serialization/: archive.cpp  archive.h  binaryarchive.h  clsmetaautoconf.cpp  clsmetaautoconf.h  metaclsautoconf.cpp  metaclsautoconf.h  sclsmeta.cpp  sclsmeta.h  serializationlogger.cpp  serializationlogger.h  serializationpublic.h  smetacls.cpp  smetacls.h  sobject.cpp  sobject.h  sobjectlist.cpp  sobjectlist.h  testcls.cpp  testcls.h  xmlarchive.h
src/sqlite/: db.cpp  db.h  dbglo.cpp  dbglo.h  dbglobal.cpp  dbglobal.h  dbtable.cpp  dbtable.h  dbtablecol.cpp  dbtablecol.h  dbtablerecord.cpp  dbtablerecord.h  inttabcol.cpp  inttabcol.h  openflag.h  propdict.cpp  propdict.h  realtabcol.cpp  realtabcol.h  rescode.h  rowdatadict.cpp  rowdatadict.h  sqldatameta.h  sqlitecon.cpp  sqlitecon.h  sqlitedriver.cpp  sqlitedriver.h  sqlitelogger.cpp  sqlitelogger.h  sqlitepublic.h  sqliteresult.cpp  sqliteresult.h  statement.cpp  statement.h  strtabcol.cpp  strtabcol.h  table.cpp  table.h  tablecol.h  tablerow.cpp  (+1 more)
test/: CMakeLists.txt  main.cpp  test_directed_graph.cpp  test_logger.h  test_notifier.cpp  test_string_proxy.cpp
(+86 files in other folders)
